Development
1.0.8
    Updated Spanish translation
    Updated Japanese translation
1.0.8b
    Allow compiling on older libxuls where certain constants are not defined
1.0.7
1.0.7b
1.0.7a1
    Version bump to 1.0.7a1
    Very Large Change
	rework the processing of playlists so that items are downloaded 
            one at a time and only as needed
	Convert NPRES and NPERR codes to text in messages
	ASX and M3U files should be properly parsed and not streamed in all cases
    Add ASX to the list of types that should be streamed, and fix the code so that it is case insensitive
    Switch plugin to streaming mode with #EXTM3U is found in the file
    Clean up some depreciated symbol warnings
    Convert plugin_list to use gm_log
    Convert the majority of the code to use gm_log instead of printf
1.0.6
    Updated Portuguese translation
    Updated Japanese translation
1.0.6b1
    Fix a problem in the style parser, was looking at a null pointer
    Added WMP plugin properties enabled and enableContextMenu
    Suppress list display
    Add rtp to the list of streaming uris
    Set PACKAGE_LOCALE_DIR based on --localedir from configure
    Change HAVE_NEW_XULRUNNER to NPAPI_USE_UPPERCASE_UTF8
    Drop --enable_new_libxul configure flag as it is autodetected now
    Fix spelling mistake, but then comment out as not needed for normal usage Issue #163
1.0.5
    Disable playing of partially cached apple.com files, mplayer seems to crash on these files
    Use the right schema file, can't believe this one has slipped by so long.
    Use better const check from Issue #161, patch from i.stakenvicius
1.0.5b2
    Simpifying const check until something better comes along Issue #162
    Fix Issue #161, improvements over last patch because NPAPI not properly bumped
    Fix support for older xulrunners, Issue #160, issue caused by patch from
    Issue #158
    Support nsapi-sdk, based on patch from Issue #159
    Fix up some const casting so that compilers do not complain Issue #158